# tidb-nm

./: .gitignore  Cargo.toml  tikv.patch
Tidb-nm-backend-vue/: .env.development  .env.production  index.html  package.json  plopfile.js  pnpm-lock.yaml
Tidb-nm-backend-vue/SightseeingTidb/src/: settings.js
Tidb-nm-backend-vue/SightseeingTidb/src/api/: index.js
Tidb-nm-backend-vue/SightseeingTidb/src/store/modules/: settings.js  user.js
Tidb-nm-backend-vue/SightseeingTidb/src/views/: index.vue  login.vue
Tidb-nm-backend-vue/SightseeingTidb/vite/plugins/: html.js
Tidb-nm-backend-vue/public/: index.css
Tidb-nm-backend-vue/src/: App.vue  main.js
Tidb-nm-backend-vue/src/layout/: index.vue
Tidb-nm-backend-vue/src/layout/components/Tools/: index.vue
Tidb-nm-backend-vue/src/router/: index.js  routes.js
Tidb-nm-backend-vue/src/store/modules/: menu.js
Tidb-nm-backend-vue/src/views/china_map/: index.vue  province.js  province.vue
tidb-nm-backend-java/: pom.xml
tidb-nm-backend-java/src/main/java/com/example/tidbnmbackend/: TidbNmBackendApplication.java
tidb-nm-backend-java/src/main/resources/: application.properties
tidb-nm-backend-java/src/test/java/com/example/tidbnmbackend/: TidbNmBackendApplicationTests.java  test.java
tidb_plugin/: manifest.toml  tikv_bpf.go  tikv_bpf.h
tikv-bpf/: Cargo.toml
tikv-bpf-common/: Cargo.toml
tikv-bpf-common/src/: lib.rs
tikv-bpf-ebpf/: Cargo.toml
tikv-bpf-ebpf/src/: consts.rs  main.rs
tikv-bpf/.cargo/: config.toml
tikv-bpf/src/: lib.rs
xtask/src/: build_ebpf.rs  run.rs
(+9 files in other folders)
