[package]
name = "tikv_bpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
# aya-log = "0.1"
tikv-bpf-common = { path = "../tikv-bpf-common", features=["user"] }
anyhow = "1"
# env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features = ["rt", "time", "sync"] }
bytes = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[lib]
crate-type = ["staticlib", "dylib"]
name = "tikv_bpf"
