[package]
name = "tikv_bpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
tikv-bpf-common = { path = "../tikv-bpf-common", features=["user"] }
anyhow = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
bytes = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[lib]
crate-type = ["staticlib", "dylib"]
name = "tikv_bpf"
